# src/routes/archetypes.js
@@ -1,15 +1,14 @@
 // archetypes.js
 
 const express = require("express");
-const archetypeController = require("../controllers/archetypeController");
-
 const router = express.Router();
+const archetypeController = require("../controllers/archetypeController");
 
 // Get all archetypes
 router.get("/", archetypeController.getAll);
 
-// Get single archetype by id
-router.get("/:id", archetypeController.getById);
+// Get single archetype by name
+router.get("/:name", archetypeController.getByName);
 
 // Get random archetype
 router.get("/random", archetypeController.getRandom);
@@ -20,11 +19,20 @@ router.get("/search", archetypeController.search);
 // Filter archetypes by trait
 router.get("/filter", archetypeController.filter);
 
+// New route for filtering by trait
+router.get("/by-trait/:trait", archetypeController.getByTrait);
+
+// Route for filtering by motivation
+router.get("/by-motivation/:motivation", archetypeController.getByMotivation);
+
+// Route for filtering by behavior
+router.get("/by-behavior/:behavior", archetypeController.getByBehavior);
+
+// Route for filtering by interest
+router.get("/by-interest/:interest", archetypeController.getByInterest);
+
 // Paginated results
 router.get("/page/:page", archetypeController.paginate);
-
-// Get by motivation
-router.get("/motivations", archetypeController.getByMotivation);
 
 // Invalid routes
 router.use((req, res, next) => {
